# Noca

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_ja.md
.github/workflows/: release.yml
docs/plans/: 2026-03-05-15min-granularity-design.md  2026-03-05-15min-granularity.md  2026-03-05-noca-design.md  2026-03-05-noca-mvp.md  2026-03-05-noca-ux-polish-design.md  2026-03-05-noca-ux-polish.md  2026-03-06-crud-design.md  2026-03-06-crud-implementation.md  2026-03-09-overlap-events-design.md  2026-03-09-overlap-events.md
src/: main.rs
src/api/: mod.rs  models.rs
src/app/: form_logic.rs  mod.rs
src/config/: mod.rs
src/ui/: form.rs  mod.rs  sidebar.rs  week_view.rs
