[package]
name = "noca"
version = "0.1.0"
edition = "2021"
description = "Notion Database weekly-view TUI calendar client"
license = "MIT"
repository = "https://github.com/kubotadaichi/Noca"
homepage = "https://github.com/kubotadaichi/Noca"
readme = "README.md"
keywords = ["notion", "tui", "calendar", "cli"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"

[dev-dependencies]
